--- a/index.html
+++ b/index.html
@@ -2,12 +2,73 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://media.licdn.com/dms/image/v2/D4D12AQEo894zSr1O3w/article-cover_image-shrink_720_1280/article-cover_image-shrink_720_1280/0/1714114002782?e=1755734400&v=beta&t=aZfghp6piBk5wsW54DRB9J3zTA5H1BR5XyDKA_aHpRk"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="ResponsEase - Advanced disaster management and emergency response platform for effective crisis coordination and relief operations."
+    />
+    <meta
+      name="keywords"
+      content="disaster management, emergency response, crisis coordination, relief operations, emergency services"
+    />
+    <meta name="author" content="ResponsEase Team" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="ResponsEase - Disaster Management Platform" />
+    <meta
+      property="og:description"
+      content="Advanced disaster management and emergency response platform for effective crisis coordination and relief operations."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourwebsite.com" />
+    <meta
+      property="og:image"
+      content="https://media.licdn.com/dms/image/v2/D4D12AQEo894zSr1O3w/article-cover_image-shrink_720_1280/article-cover_image-shrink_720_1280/0/1714114002782?e=1755734400&v=beta&t=aZfghp6piBk5wsW54DRB9J3zTA5H1BR5XyDKA_aHpRk"
+    />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="ResponsEase - Disaster Management Platform" />
+    <meta
+      name="twitter:description"
+      content="Advanced disaster management and emergency response platform for effective crisis coordination and relief operations."
+    />
+    <meta
+      name="twitter:image"
+      content="https://media.licdn.com/dms/image/v2/D4D12AQEo894zSr1O3w/article-cover_image-shrink_720_1280/article-cover_image-shrink_720_1280/0/1714114002782?e=1755734400&v=beta&t=aZfghp6piBk5wsW54DRB9J3zTA5H1BR5XyDKA_aHpRk"
+    />
+
+    <title>ResponsEase</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+<!-- Loading Screen HTML -->
+<div id="loading-screen">
+  <div class="loader"></div>
+  <div class="loading-text">Loading ResponsEase...</div>
+</div>
+
+<!-- Hide loading screen when React app mounts -->
+<script>
+  window.addEventListener('load', function () {
+    setTimeout(function () {
+      const loadingScreen = document.getElementById('loading-screen');
+      if (loadingScreen) {
+        loadingScreen.classList.add('hidden');
+        loadingScreen.remove();
+      }
+    }, 1000);
+  });
+</script>
